take out unnecassary things

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="/static/index.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Connect 4 Arena</title>
   </head>
 
   <body>
@@ -20,7 +21,7 @@
       <a id="leave" href="." style="display: none;">leave server</a>
       <p id="hasOpponent">no opponent</p>
       <p id="won" style="display: none;">game won</p>
-      <p id="turn"></p>
+      <p id="turn" style="display: none;"></p>
       <a id="restart" href="." style="display: none;">restart game</a>
     </div>
   </body>
