--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
   </head>
 
   <body>
-    <div id="board" style="display: none;"></div>
-    <div id="players"></div>
-    <div id="setup">
-      <div id="serverSetup">
-        <input id="username" placeholder="username" />
-        <br />
-        <input id="password" placeholder="server" />
-        <button onclick="joinGame()">join game</button>
+    <nav>
+      <h1>Connect 4 Arena</h1>
+    </nav>
+    <main>
+      <div id="board" style="display: none;"></div>
+      <div id="players"></div>
+      <div id="setup">
+        <div id="serverSetup">
+          <input id="username" placeholder="Username" />
+          <input id="password" placeholder="Server" />
+          <button onclick="joinGame()">Join Game</button>
+        </div>
+        <a id="leave" href="." style="display: none;">leave server</a>
+        <p id="hasOpponent" style="display: none">no opponent</p>
+        <p id="won" style="display: none;">game won</p>
+        <p id="turn" style="display: none;"></p>
+        <a id="restart" href="." style="display: none;">restart game</a>
       </div>
-      <a id="leave" href="." style="display: none;">leave server</a>
-      <p id="hasOpponent">no opponent</p>
-      <p id="won" style="display: none;">game won</p>
-      <p id="turn" style="display: none;"></p>
-      <a id="restart" href="." style="display: none;">restart game</a>
-    </div>
-  </body>
+    </body>
+  </main>
 </html>
