fix styling and add win message

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
       <div id="board" style="display: none;"></div>
       <div id="players"></div>
+      <p id="won" style="display: none;"></p>
       <div id="setup">
         <div id="serverSetup">
           <input id="username" placeholder="Username" />
@@ -23,9 +24,7 @@
         </div>
         <a id="leave" href="." style="display: none;">leave server</a>
         <p id="hasOpponent" style="display: none">no opponent</p>
-        <p id="won" style="display: none;">game won</p>
         <p id="turn" style="display: none;"></p>
-        <a id="restart" href="." style="display: none;">restart game</a>
       </div>
     </body>
   </main>
