add server list

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
       <div id="setup">
         <div id="serverSetup">
           <input id="username" placeholder="Username" />
-          <input id="password" placeholder="Server" />
+          <input id="password" placeholder="Game ID" />
           <button onclick="joinGame()">Join Game</button>
+        </div>
+        <div id="serverList">
+          <p class="server-title">Server List</p>
         </div>
         <a id="leave" href="." style="display: none;">leave server</a>
         <p id="hasOpponent" style="display: none">no opponent</p>
