--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <p id="won" style="display: none;"></p>
       <div id="setup">
         <div id="serverSetup" style="display: none">
-          <input id="username" placeholder="Username" />
-          <input id="password" placeholder="Game ID" style="display: none" />
+          <input id="username" maxlength="16" placeholder="Username" />
+          <input id="password" maxlength="16" placeholder="Game ID" style="display: none" />
           <button id="joinGame" onclick="joinGame()">Join Game</button>
         </div>
         <div id="serverList">
