update performance and search engine optimisation

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <script defer src="/static/index.js"></script>
     <link href="/static/index.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="creator: alex haszard, game: connect 4" />
     <title>Connect 4 Arena</title>
   </head>
 
@@ -33,7 +34,7 @@
           <p class="server-title">Server List</p>
           <div id="createServer" onclick="createServer()">
             <p>Create Server</p>
-            <img class="images" src="/static/images/plus.png">
+            <img class="images" src="/static/images/plus.png" alt="create server image">
           </div>
           <div id="servers">
             
